--- a/index.html
+++ b/index.html
@@ -1,82 +1,86 @@
-<!DOCTYPE html>
+<!doctype html>
+<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
+<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640" />
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen"/>
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)"/>
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
+  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen"/>
+  <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="javascripts/script.js"></script>
 
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
-    <title>FFT-Python by balzer82</title>
-  </head>
+  <title>FFT-Python</title>
+  <meta name="description" content="FFT Examples in Python">
 
-  <body>
-    <a id="forkme_banner" href="https://github.com/balzer82/FFT-Python">View on GitHub</a>
-    <div class="shell">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
-      <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>FFT-Python</h1>
-            <h2>FFT Examples in Python</h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-      </header>
+</head>
 
-      <section id="downloads">
-        <span class="inner">
-          <a href="https://github.com/balzer82/FFT-Python/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/balzer82/FFT-Python/tarball/master" class="tgz"><em>download</em> .TGZ</a>
-        </span>
-      </section>
+<body>
 
-
-      <span class="banner-fix"></span>
-
-
-      <section id="main_content">
-        <p>This tutorial covers step by step, how to perform a Fast Fourier Transform with Python.</p>
+  <div class="wrapper">
+    <header>
+      <h1 class="title">FFT-Python</h1>
+    </header>
+    <div id="container">
+      <p class="tagline">FFT Examples in Python</p>
+      <div id="main" role="main">
+        <div class="download-bar">
+        <div class="inner">
+          <a href="https://github.com/balzer82/FFT-Python/tarball/master" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/balzer82/FFT-Python/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/balzer82/FFT-Python" class="code">View FFT-Python on GitHub</a>
+        </div>
+        <span class="blc"></span><span class="trc"></span>
+        </div>
+        <article class="markdown-body">
+          <p>This tutorial covers step by step, how to perform a Fast Fourier Transform with Python.</p>
 
 <p><img src="https://raw.githubusercontent.com/balzer82/FFT-Python/master/FFT.png" alt="FFT"></p>
 
 <p>Including</p>
 
 <ul>
-<li>How to scale the x- and y-axis right in the amplitude spectrum</li>
+<li>How to scale the x- and y-axis in the amplitude spectrum</li>
 <li>Leakage Effect</li>
 <li>Windowing</li>
-<li>Real world data example</li>
-</ul><h4>
-<a name="take-a-look-at-it" class="anchor" href="#take-a-look-at-it"><span class="octicon octicon-link"></span></a><a href="http://nbviewer.ipython.org/github/balzer82/FFT-Python/blob/master/FFT-Tutorial.ipynb">Take a look at it</a>
-</h4>
-      </section>
+</ul><h3>
+<a name="take-a-look-at-the-ipython-notebook" class="anchor" href="#take-a-look-at-the-ipython-notebook"><span class="octicon octicon-link"></span></a><a href="http://nbviewer.ipython.org/github/balzer82/FFT-Python/blob/master/FFT-Tutorial.ipynb">Take a look at the IPython Notebook</a>
+</h3>
 
-      <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/balzer82">balzer82</a> can be found on <a href="https://github.com/balzer82/FFT-Python">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
-      </footer>
+<h4>
+<a name="real-world-data-example" class="anchor" href="#real-world-data-example"><span class="octicon octicon-link"></span></a>Real World Data Example</h4>
 
+<p>From</p>
+
+<p><img src="https://raw.githubusercontent.com/balzer82/FFT-Python/master/VerticalGridLoadGermany2013.png" alt="Vertical Netload Germany 2013"></p>
+
+<p>To</p>
+
+<p><img src="https://raw.githubusercontent.com/balzer82/FFT-Python/master/VerticalGridLoadGermany2013-FFT.png" alt="Periods in NetLoad"></p>
+        </article>
+      </div>
     </div>
+    <footer>
+      <div class="owner">
+      <p><a href="https://github.com/balzer82" class="avatar"><img src="https://avatars0.githubusercontent.com/u/3329893?s=60" width="48" height="48"/></a> <a href="https://github.com/balzer82">balzer82</a> maintains <a href="https://github.com/balzer82/FFT-Python">FFT-Python</a></p>
 
-              <script type="text/javascript">
+
+      </div>
+      <div class="creds">
+        <small>This page generated using <a href="http://pages.github.com/">GitHub Pages</a><br/>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+      </div>
+    </footer>
+  </div>
+  <div class="current-section">
+    <a href="#top">Scroll to top</a>
+    <a href="https://github.com/balzer82/FFT-Python/tarball/master" class="tar">tar</a><a href="https://github.com/balzer82/FFT-Python/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <p class="name"></p>
+  </div>
+
+            <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
           </script>
@@ -87,5 +91,5 @@
             } catch(err) {}
           </script>
 
-  </body>
+</body>
 </html>
